# HyperSheaf

./: LICENSE  README.md  pyproject.toml  tutorial.py
hyper_sheaf/: data.py  hyperedge_feature_builders.py  sheaf_learners.py
hyper_sheaf/feature_builders/: __init__.py  base_builder.py  base_features.py  cp_decomp.py  neighbour_aggregation.py
hyper_sheaf/models/: mlp.py
hyper_sheaf/models/sheaf_hgcn/: hgcn_sheaf_laplacians.py  models.py  sheaf_builder.py
hyper_sheaf/models/sheaf_hgnn/: config.py  layers.py  models.py  sheaf_builder.py
hyper_sheaf/sheaf_learners/: __init__.py  core.py  local_concat.py  sheaf_learners.py  type_concat.py  type_ensemble.py
hyper_sheaf/utils/: mlp.py  orthogonal.py  utils.py
tests/utils/: test_mlp.py
